# ReadsProfiler

./: CMakeLists.txt  README.md  database.db
Client/: client.cpp
Client/windows/: BookListStructure.h  bookitem.cpp  bookitem.h  bookitem.ui  booklist.cpp  booklist.h  booklist.ui  downloadlist.cpp  downloadlist.h  downloadlist.ui  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerform.cpp  registerform.h  registerform.ui  searchwindow.cpp  searchwindow.h  searchwindow.ui
Commands/AbstractClass/: Command.cpp  Command.h
Commands/Description/: Description.cpp  Description.h
Commands/Download/: Download.cpp  Download.h
Commands/Login/: Login.cpp  Login.h
Commands/Rate/: Rate.cpp  Rate.h
Commands/Recommand/: Recommend.cpp  Recommend.h
Commands/Register/: Register.cpp  Register.h
Commands/Search/: Search.cpp  Search.h
MySQL/: MySQL.cpp  MySQL.h
Networking/: Networking.cpp  Networking.h
Server/: server.cpp
